--- a/.gitignore
+++ b/.gitignore
@@ -83,9 +83,9 @@ configure*
 Thumbs.db
 .build
 
-/bin/Data/Asset
 /bin/Data/Animation/Materials
 /bin/Data/Animation/Textures
 /bin/Urho3DPlayer
 /bin/tool/AssetImporter
 /bin/tool/ScriptCompiler
+/bin/Data/Animation
