refine whole data structure
Redmine/Any: http://iredmine/issues/130984
Change-Id: I12ce7e453690007b507def80c4ef18f64558fd89

--- a/.gitignore
+++ b/.gitignore
@@ -83,9 +83,11 @@ configure*
 Thumbs.db
 .build
 
-/bin/Data/Animation/Materials
-/bin/Data/Animation/Textures
+
 /bin/Urho3DPlayer
 /bin/tool/AssetImporter
 /bin/tool/ScriptCompiler
-/bin/Data/Animation
+/bin/MyData/Animation
+/bin/MyData/Animation
+/bin/MyData/Models
+/bin/MyData/Textures
