add batch process script
Redmine/Any: http://iredmine/issues/130984
Change-Id: I9953093efe113ba1f6c982207505d585067dc8e4

--- a/.gitignore
+++ b/.gitignore
@@ -87,8 +87,7 @@ Thumbs.db
 /bin/Urho3DPlayer
 /bin/tool/AssetImporter
 /bin/tool/ScriptCompiler
-/bin/MyData/Animation
-/bin/MyData/Animation
+/bin/MyData/Animations
 /bin/MyData/Models
 /bin/MyData/Textures
 /bin/Asset
