--- a/.gitignore
+++ b/.gitignore
@@ -89,5 +89,6 @@ Thumbs.db
 /bin/tool/ScriptCompiler
 /bin/MyData/Animations
 /bin/MyData/Models
-/bin/Asset
+/bin/Asset/Animations
 /bin/Urho3DPlayer_d.exe
+/bin/MyData/CharacterTextures
