--- a/.gitignore
+++ b/.gitignore
@@ -87,9 +87,12 @@ Thumbs.db
 /bin/Urho3DPlayer
 /bin/tool/AssetImporter
 /bin/tool/ScriptCompiler
+/bin/tool/PackageTool
 /bin/MyData/Animations
 /bin/MyData/Models
 /bin/Asset/Animations
 /bin/Urho3DPlayer_d.exe
 /bin/MyData/CharacterTextures
 /bin/Asset/*.zip
+*.asc
+/Release
