--- a/.gitignore
+++ b/.gitignore
@@ -89,7 +89,7 @@ Thumbs.db
 /bin/tool/ScriptCompiler
 /bin/tool/PackageTool
 /bin/MyData/Animations
-# /bin/MyData/Models
+/bin/MyData/Models
 /bin/Asset/Animations
 /bin/Urho3DPlayer_d.exe
 # /bin/MyData/CharacterTextures
