--- a/.gitignore
+++ b/.gitignore
@@ -99,4 +99,8 @@ Thumbs.db
 /bin/Release.zip
 /bin/Editor
 
+/bin/Urho3DPlayer.exe
+/bin/tool/AssetImporter.exe
+/bin/Urho3D.dll
+/bin/tool/Urho3D.dll
 
