--- a/.gitignore
+++ b/.gitignore
@@ -88,7 +88,7 @@ Thumbs.db
 /bin/tool/AssetImporter
 /bin/tool/ScriptCompiler
 /bin/tool/PackageTool
-/bin/MyData/Animations
+#/bin/MyData/Animations
 /bin/MyData/Models
 /bin/Asset/Animations
 /bin/Urho3DPlayer_d.exe
